# amplify-nonasync

./: CONTRIBUTING.md  Cargo.toml  LICENSE  MANIFEST.yml  README.md
.github/: FUNDING.yml
.github/workflows/: build.yml
src/: lib.rs  persistence.rs
