[package]
name = "nonasync"
version = "0.1.2"
description = "A set of utilities useful for building a non-blocking non-async APIs"
authors = [
    "Dr. Maxim Orlovsky <orlovsky@ubideco.org>",
]
keywords = ["generics", "core", "wrap", "patterns"]
categories = ["data-structures", "rust-patterns"]
repository = "https://github.com/rust-amplify/rust-amplify"
homepage = "https://github.com/rust-amplify"
license = "Apache-2.0"
readme = "README.md"
edition = "2021"
rust-version = "1.75.0" # Due to the use of `impl` in trait return types

[dependencies]
amplify = "4.7.0"
log = { version = "0.4.22", optional = true }

[features]
default = []
log = ["dep:log"]
